To fix HxSidebar width in collapsed state

--- a/Havit.Blazor.Components.Web.Bootstrap/Navigation/HxSidebar.razor.css
+++ b/Havit.Blazor.Components.Web.Bootstrap/Navigation/HxSidebar.razor.css
@@ -7,7 +7,7 @@
 }
 
 .hx-sidebar.collapsed {
-	width: var(--hx-sidebar-collapsed-width);
+	flex-basis: var(--hx-sidebar-collapsed-width);
 	min-width: auto;
 }
 
